K8s-resources/UI/ui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weatherapp-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: weatherapp-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: weatherapp-ui
    spec:
      containers:
      - name: weatherapp-ui
        image: moha011/weatherapp-ui
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /health
            port: http
        readinessProbe:
          httpGet:
            path: /health
            port: http
