K8s-resources/UI/ui-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weatherapp-ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"    # Add this for SSL passthrough
    kubernetes.io/tls-acme: "true" 
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - weatherapp.local
      secretName: weatherapp-ui-tls

  rules:
    - host: weatherapp.local
      http: 
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weatherapp-ui
                port:
                  number: 3000
